# RSyncDaemon

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: cicd.yaml  publish.yaml
example/systemctl_service/: rsyncdaemon.conf  rsyncdaemon.service
src/rsyncdaemon/: confbuilder.py  rsyncdaemon-sample.conf  rsyncdaemon.py
