[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsyncdaemon"
version = "x.x.x"
authors = [
  { name="Pankaj Jackson", email="pankajackson@live.co.uk" },
]
description = "Python based CLI Remote Syncing Daemon service."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies=['paramiko', 'watchdog', 'toml']
keywords=['rsync', 'sync', 'transfer', 'backup']
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: Unix",
]

[project.scripts]
rsyncdaemon = "rsyncdaemon.rsyncdaemon:main"

[project.urls]
"Homepage" = "https://github.com/pankajackson/RSyncDaemon"
"Bug Tracker" = "https://github.com/pankajackson/RSyncDaemon/issues"
"Source" = "https://github.com/pankajackson/RSyncDaemon"